k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: dn-hello-world-svc
  labels:
    app: dn-hello-world
    tier: dev
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: dn-hello-world
    tier: dev
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dn-hello-world
  labels:
    app: dn-hello-world
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dn-hello-world
        tier: dev
    spec:
      containers:
      - name:  dn-hello-world
        image: gcr.io/kenthua-testing/testapp:latest
        readinessProbe:
          httpGet:
            path: /api/values
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /api/values
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
