svc-l4.yaml
apiVersion: v1
kind: Service
metadata:
  name: dn-hello-world-svc
  labels:
    app: dn-hello-world
    tier: dev
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dn-hello-world
    tier: dev
