dn-hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dn-hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
  labels:
    app: dn-hello-world
spec:
  backend:
    serviceName: dn-hello-world-svc
    servicePort: 80
